--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -2,7 +2,6 @@
 
 :root{
     font-size: 16px;
-    font-family: 'Roboto' sans-serif;
 }
 
 
@@ -13,7 +12,7 @@ div#spinner-wrapper{
     top: 0;
     z-index: 999999;
     background-color: rgba($color: black, $alpha: .8);
-
+    visibility: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,6 +42,7 @@ div#spinner-wrapper{
 
 
 div.topbar{
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 60%, $color-primary 90%);
     background-color: $color-primary;
     padding: .5rem;
 }
@@ -64,13 +64,21 @@ h6{
     margin-bottom: 2rem;
 }
 
+#diagnose{
+    div.row{
+        & div.col-md-4{
+            padding-bottom: 0 !important;
+        }
+    }
+}
+
 #bannerCarousel{
-    height: 90vh;
+    // height: 9vh;
     overflow: hidden;
     .banner-title{
         font-size:450%;
-        letter-spacing: 6px;
-        font-family: 'Roboto', sans-serif;
+        // letter-spacing: 6px;
+        font-family: 'Montserrat', sans-serif !important;
     }
     .carousel-item{
         
@@ -84,6 +92,7 @@ h6{
         .carousel-caption{
             top: 30%;
             transform-origin: center;
+       
         }
     }
 }
@@ -131,7 +140,10 @@ a.btn-banner{
     background-color: $color-primary;
 }
 .section-title{
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    // background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    // background : radial-gradient(circle , rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    // background: linear-gradient(90deg, rgba(252,176,69,1) 0%, rgba(253,29,29,1) 34%, rgba(131,58,180,1) 100%,);
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 30%, $color-primary 90%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent !important;
 }
@@ -150,6 +162,12 @@ a.btn-banner{
                 margin-right: 1rem;
             }
         }
+    }
+}
+
+#whyUs{
+    div.card .card-body{
+        text-align: center;
     }
 }
 
@@ -209,10 +227,17 @@ footer.footer{
 
 
 @media screen and (max-width: $breakpoint-sm){
+    :root{
+        font-size: 14px;
+    }
     #services{
         border-radius: 0;
         background: rgb(2,59,68);
         background: linear-gradient(149deg, rgba(2,59,68,1) 0%, rgba(0,187,213,1) 50%, rgba(2,59,68,1) 100%);
+
+        ul{
+            padding-left: 0px;
+        }
     }
 
     #bannerCarousel{
@@ -225,11 +250,18 @@ footer.footer{
         //overflow: hidden;
         .banner-title{
             font-size:1.7rem;
-            letter-spacing: 6px;    
+            // letter-spacing: 6px;    
             font-family: 'Roboto', sans-serif;
         }
         p.lead{
             font-size: 1rem !important;
+        }
+    }
+
+    #whyUs{
+        .card{
+            padding: 0;
+            margin: 1rem auto;
         }
     }
 
