--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -262,6 +262,13 @@ footer.footer{
         .card{
             padding: 0;
             margin: 1rem auto;
+            .card-body{
+                display: flex;
+                align-items: flex-start;
+                .my-card-detail{
+                    text-align: left;
+                }
+            }
         }
     }
 
