--- a/styles/main.css
+++ b/styles/main.css
@@ -255,9 +255,25 @@ footer.footer {
     text-align: left;
     top: 3rem !important;
   }
+  #bannerCarousel .carousel-caption span.extra-content {
+    display: none;
+  }
   #bannerCarousel .banner-title {
-    font-size: 1.7rem;
-    font-family: 'Roboto', sans-serif;
+    font-size: 2.2rem;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+  }
+  #bannerCarousel p.lead {
+    text-align: center;
+  }
+  #bannerCarousel a.btn-banner {
+    text-align: center;
+    display: block;
+    width: 80%;
+    margin: 1rem auto;
+  }
+  #bannerCarousel .banner-image {
+    height: 80vh !important;
   }
   #bannerCarousel p.lead {
     font-size: 1rem !important;
