--- a/public/styles/variable.scss
+++ b/public/styles/variable.scss
@@ -1,6 +1,8 @@
-$color-primary: #009fa9;
+$color-primary: #022335;
+$color-primary2: #0071df;
 $bg-grey-1: #F8F8F8;
 $text-light: white;
+$color-accent: #ffb400;
 
 $breakpoint-xs: 0;
 $breakpoint-sm: 576px;
