--- a/about/index.liquid
+++ b/about/index.liquid
@@ -2,4 +2,132 @@
 title: Laptop Support | About
 layout: client-layout.liquid
 ---
-<h1>about </h1>
+<div class="container pt-4 pb-4">
+    <div class="row bg-light br-10">
+        <div class="col-md-7 d-flex flex-column justify-content-center">
+            <div class="content">
+                <h3 class="section-title display-4">About Us</h3>
+                <p class="lead">LaptopSupport.in is one of the leading companies in Laptop Services & Sales. </p>
+                <a href="tel:911234567890" class="section-title">Call now</a>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <img src="../images/about_me.svg" style="width: 100%;">
+        </div>
+    </div>
+    <div class="row pt-3">
+        <div class="col-md-7">
+            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300"
+                class="bi bi-building about-profile-background about-section-icon" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z" />
+                <path
+                    d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
+            </svg>
+            <div class="d-flex align-items-end">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" class="bi bi-building about-section-icon"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z" />
+                    <path
+                        d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
+                </svg>
+                <h3 class="m-0 section-title ml-2">Profile</h3>
+            </div>
+            <p class="lead">
+                &nbsp;&nbsp;&nbsp;&nbsp;We are specialise & authorised leader in the laptop repair, With a strong team
+                of
+                highly-skilled
+                professionals, knowledge & latest equipment for fastest services, we bring out more technical repair
+                solutions in-house, genuine parts inventory to provide most affordable & best quality services.
+                <br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;In this Laptop Service industry from the year 2000 has made us capable of
+                providing
+                and creating the
+                best solutions for our customer. Laptopsupport.in is one of the leading companies in Laptop Repair and
+                Services domain, and is gaining momentum day by day. We have a strong team of individuals who have
+                supported and contributed to our success.
+            </p>
+            <button class="btn btn-light br-20">Connect now</button>
+
+
+
+        </div>
+    </div>
+    <div class="row pt-3">
+        <div class="col-md-7 ml-auto">
+            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300"
+                class="about-misson-background about-section-icon bi bi-graph-up" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z" />
+            </svg>
+            <div class="d-flex align-items-end justify-content-end">
+                <h3 class="m-0 section-title mr-2">Mission</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" class="about-section-icon bi bi-graph-up"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z" />
+                </svg>
+
+            </div>
+            <p class="lead">
+                &nbsp;&nbsp;&nbsp;&nbsp;We are also into provideing service for Projectors & HDD/SSD data recovery with
+                most industry standards, We have always endeavoured to solve the issues and provide our customer with
+                world-class services before and after-sales.
+
+
+                <br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;For Laptopsupport.in, our main priority is Customer Satisfaction. And To become
+                one of the leading service provider in the world of Laptop technology.
+            </p>
+            <button class="btn btn-light br-20">Connect now</button>
+
+
+
+        </div>
+    </div>
+</div>
+
+<section id="contactSection" class="mt-5 text-light pb-5 pt-5">
+    <h1 class="text-center section-title-light">Know more</h1>
+    <p class="text-center">Feel free to contact us</p>
+    <div class="container ">
+        <div class="col-md-7 mx-auto fadeInRight">
+            <div class="form-group">
+                <label>Name</label>
+                <input class="form-control" placeholder="Name">
+            </div>
+
+            <div class="form-row fadeInRight">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Phone</label>
+                        <input class="form-control" type="tel" placeholder="XXXX-XXXX-XX">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input class="form-control" type="email" placeholder="abc@example.com">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Services</label>
+                <select class="form-control">
+                    <option>Laptop Services</option>
+                    <option>Apple Services</option>
+                    <option>Projector Services</option>
+                </select>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Message</label>
+                <textarea class="form-control" placeholder="Type Message here."></textarea>
+            </div>
+
+            <button class="btn mt-5 btn-warning btn-block ml-auto fadeInRight">Submit</button>
+        </div>
+    </div>
+</section>
