--- a/index.liquid
+++ b/index.liquid
@@ -19,7 +19,7 @@ layout: client-layout.liquid
                         </svg>
                         Call Now
                     </a>
-                    <span class="extra-content">or</span>
+
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -55,7 +55,7 @@ layout: client-layout.liquid
                         </svg>
                         Call Now
                     </a>
-                    <span class="extra-content">or</span>
+
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -92,7 +92,7 @@ layout: client-layout.liquid
                         </svg>
                         Call Now
                     </a>
-                    <span class="extra-content">or</span>
+
                     <a class="btn-banner inquiry" href="tel:+918469443014">
                         <svg version="1.1" width="2rem" height="2rem" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -128,12 +128,12 @@ layout: client-layout.liquid
 
 </div>
 
-<section class="container pt-5 pb-5">
-    <div class="row">
-        <div class="col-md-4">
+<section class="container pt-5 pb-5" id="whyus">
+    <div class="row ">
+        <div class="col-md-4 ">
             <h2 class="section-title">Why choose us?</h2>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 ">
             <p class="lead">We are providing support in laptop & computer from over a decade.. lorem ippsum</p>
         </div>
     </div>
@@ -143,7 +143,7 @@ layout: client-layout.liquid
 <section class="container pt-5 pb-5" id="diagnose">
     <h2 class="text-center section-title">Diagnosing Process</h2>
     <div class="row">
-        <div class="col-md-4 p-5">
+        <div class="col-md-4 p-5 anim">
 
             <div class="card w-100 text-center">
                 <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-file-earmark-plus"
@@ -163,7 +163,7 @@ layout: client-layout.liquid
             </div>
 
         </div>
-        <div class="col-md-4 p-5">
+        <div class="col-md-4 p-5 anim">
 
             <div class="card w-100 text-center">
                 <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2" fill="currentColor"
@@ -181,7 +181,7 @@ layout: client-layout.liquid
             </div>
 
         </div>
-        <div class="col-md-4 p-5">
+        <div class="col-md-4 p-5 anim">
 
             <div class="card w-100 text-center">
                 <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-truck" fill="currentColor"
@@ -204,13 +204,13 @@ layout: client-layout.liquid
 
 
 <section class="pt-5 pb-5" id="services">
-    <h1 class="text-center text-light mb-4 section-title">Our Services</h1>
+    <h1 class="text-center mb-4 section-title-light">Our Services</h1>
     <div class="container text-light">
         <div class="row align-items-center">
-            <div class="col-md-6 p-4 d-none d-md-inline">
+            <div class="col-md-6 p-4 d-none d-md-inline animRight">
                 <img src="/images/laptop.png" alt="laptop banner" class="w-100 ">
             </div>
-            <div class="col-md-6 p-4">
+            <div class="col-md-6 p-4 animLeft">
                 <h3 class="point-title">Laptop Repair Services</h3>
                 <ul>
                     <li>Logic Board Repair/ Replacement</li>
@@ -222,13 +222,13 @@ layout: client-layout.liquid
                     <li>Bios / Firmware password receovery</li>
                     <li>Bios / Firmware ReWriting</li>
                     <li>Battery Chnarging Solution</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
         </div>
         <div class="row align-items-center">
 
-            <div class="col-md-7 p-4">
+            <div class="col-md-7 p-4 animRight">
                 <h3 class="point-title">Apple/ Macbook/ iMac Services</h3>
                 <ul>
                     <li>macOS installation</li>
@@ -237,18 +237,18 @@ layout: client-layout.liquid
                     <li>Display Repair / Replacement</li>
                     <li>Firmware Update / Recovery (T2)</li>
                     <li>Data Recovery</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
-            <div class="col-md-5 p-4 d-none d-md-inline">
+            <div class="col-md-5 p-4 d-none d-md-inline animLeft">
                 <img src="/images/apple_family.png" alt="apple family" class="w-100 ">
             </div>
         </div>
         <div class="row align-items-center">
-            <div class="col-md-5 p-4 d-none d-md-inline">
+            <div class="col-md-5 p-4 d-none d-md-inline animRight">
                 <img src="/images/projector.png" alt="projector" class="w-75 ">
             </div>
-            <div class="col-md-7 p-4">
+            <div class="col-md-7 p-4 animLeft">
                 <h3 class="point-title">Projector Services</h3>
                 <ul>
                     <li>LAMP Replacement</li>
@@ -257,13 +257,13 @@ layout: client-layout.liquid
                     <li>Lens Replacement</li>
                     <li>Low brightness solution</li>
                     <li> Projector Accessories sales</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
         </div>
         <div class="row align-items-center">
 
-            <div class="col-md-7 p-4">
+            <div class="col-md-7 p-4 animRight">
                 <h3 class="point-title">Data Recovery</h3>
                 <ul>
                     <li>Firmware Issue Resolution</li>
@@ -272,10 +272,10 @@ layout: client-layout.liquid
                     <li>Logic Board Repair/ Replacement</li>
                     <li>Partition Recovery</li>
                     <li>Lost File Recovery</li>
-                    <a href="#">Read more</a>
+                    <a href="#" class="section-title-light">Read more</a>
                 </ul>
             </div>
-            <div class="col-md-5 p-4 d-none d-md-inline">
+            <div class="col-md-5 p-4 d-none d-md-inline animLeft">
                 <img src="/images/hddrecovery.png" alt="projector" class="w-75 ">
             </div>
         </div>
@@ -283,7 +283,7 @@ layout: client-layout.liquid
 </section>
 
 
-<section class="pt-5 pb-5 container-fluid">
+<section class="pt-5 pb-5 container-fluid ">
 
     <h2 class="text-center mb-5 section-title">What our customer says</h2>
 
@@ -341,7 +341,7 @@ layout: client-layout.liquid
     <h2 class="text-center mb-5 section-title">Why Choose only Us</h2>
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
                     <!-- <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
                         fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -362,7 +362,7 @@ layout: client-layout.liquid
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
                     <div class="card-body ">
                         <div>
@@ -377,7 +377,7 @@ layout: client-layout.liquid
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100">
 
 
@@ -393,7 +393,7 @@ layout: client-layout.liquid
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
 
 
@@ -412,7 +412,7 @@ layout: client-layout.liquid
 
         </div>
         <div class="row mt-4 justify-content-center">
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100 ">
 
                     <div class="card-body ">
@@ -427,7 +427,7 @@ layout: client-layout.liquid
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 fadeInUp-stagger">
                 <div class="card w-100">
 
                     <div class="card-body ">
@@ -443,8 +443,8 @@ layout: client-layout.liquid
                 </div>
             </div>
 
-            <div class="col-md-3">
-                <div class="card w-100">
+            <div class="col-md-3 fadeInUp-stagger">
+                <div class="card w-100 ">
 
                     <div class="card-body ">
                         <div>
@@ -464,16 +464,16 @@ layout: client-layout.liquid
 </section>
 
 <section id="contactSection" class="text-light pb-5 pt-5">
-    <h1 class="text-center section-title">Still having query ?</h1>
+    <h1 class="text-center section-title-light">Still having query ?</h1>
     <p class="text-center">Feel free to contact us</p>
-    <div class="container">
-        <div class="col-md-7 mx-auto">
+    <div class="container ">
+        <div class="col-md-7 mx-auto fadeInRight">
             <div class="form-group">
                 <label>Name</label>
                 <input class="form-control" placeholder="Name">
             </div>
 
-            <div class="form-row">
+            <div class="form-row fadeInRight">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Phone</label>
@@ -488,7 +488,7 @@ layout: client-layout.liquid
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group fadeInRight">
                 <label>Services</label>
                 <select class="form-control">
                     <option>Laptop Services</option>
@@ -497,12 +497,12 @@ layout: client-layout.liquid
                 </select>
             </div>
 
-            <div class="form-group">
+            <div class="form-group fadeInRight">
                 <label>Message</label>
                 <textarea class="form-control" placeholder="Type Message here."></textarea>
             </div>
 
-            <button class="btn mt-5 btn-warning btn-block ml-auto">Submit</button>
+            <button class="btn mt-5 btn-warning btn-block ml-auto fadeInRight">Submit</button>
         </div>
     </div>
 </section>
