--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,7 +1,7 @@
 @import "./variable.scss";
 
 :root{
-    font-size: 16px;
+    font-size: 14px;
 }
 
 
@@ -42,9 +42,14 @@ div#spinner-wrapper{
 
 
 div.topbar{
-    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 60%, $color-primary 90%);
+    // background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 60%, $color-primary 90%);
     background-color: $color-primary;
     padding: .5rem;
+    color: $color-accent;
+
+    .header-icon path{
+        fill: $color-accent;
+    }
 }
 
 a{
@@ -121,14 +126,15 @@ a.btn-banner{
     padding: 1rem;
     border: 2px solid $text-light;
     border-radius: 10px;
+    transition: .2s;
     &.call:hover{
-        background-color: $color-primary;
+        background-color: $color-accent;
         text-decoration: none;
         color: $text-light;
     }
 
     &.inquiry:hover{
-        background-color: $color-primary;
+        background-color: $color-accent;
         text-decoration: none;
         color: $text-light;
     }
@@ -143,7 +149,13 @@ a.btn-banner{
     // background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
     // background : radial-gradient(circle , rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     // background: linear-gradient(90deg, rgba(252,176,69,1) 0%, rgba(253,29,29,1) 34%, rgba(131,58,180,1) 100%,);
-    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 30%, $color-primary 90%);
+    background: linear-gradient(90deg, $color-primary2 0%, $color-primary 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent !important;
+}
+
+.section-title-light{
+    background: linear-gradient(180deg, $color-accent 10%, $text-light 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent !important;
 }
@@ -151,7 +163,7 @@ a.btn-banner{
     border-top-right-radius: 20%;
     border-bottom-right-radius: 20%;
     background: rgb(2,59,68);
-    background: linear-gradient(149deg, rgba(2,59,68,1) 0%, rgba(0,187,213,1) 90%, rgba(0,224,255,1) 100%);
+    background: linear-gradient(149deg, $color-primary 0%, $color-primary2 100%);
   
     ul{
         list-style: none;
@@ -223,7 +235,26 @@ footer.footer{
     font-size: 6rem;
 }
 
+.br-10{
+    border-radius: 10px;
+}
+.br-20{
+    border-radius: 20px;
+}
 
+.about-section-icon{
+    fill: $color-primary2;
+}
+.about-profile-background{
+    opacity: 0.4;
+    position: absolute;
+    left: 100%;
+}
+.about-misson-background{
+    opacity: 0.4;
+    position: absolute;
+    right: 110%;
+}
 
 
 @media screen and (max-width: $breakpoint-sm){
@@ -233,7 +264,7 @@ footer.footer{
     #services{
         border-radius: 0;
         background: rgb(2,59,68);
-        background: linear-gradient(149deg, rgba(2,59,68,1) 0%, rgba(0,187,213,1) 50%, rgba(2,59,68,1) 100%);
+        background: linear-gradient(149deg,$color-primary 0%, $color-primary2 100%);
 
         ul{
             padding-left: 0px;
@@ -298,6 +329,24 @@ footer.footer{
         
     }
 
+    .about-profile-background{
+        display: none;
+    }
+
+    .about-misson-background{
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: $breakpoint-md){
+    .about-profile-background{
+        display: none;
+    }
+
+    .about-misson-background{
+        display: none;
+    }
 }
 
 
