contact page completed

--- a/contact/index.liquid
+++ b/contact/index.liquid
@@ -2,4 +2,89 @@
 title: Laptop Support | Contact
 layout: client-layout.liquid
 ---
-<h1>Contact</h1>
+<div class="container pt-4 pb-4">
+    <div class="row bg-light br-10">
+        <div class="col-md-7 d-flex flex-column justify-content-center">
+            <div class="content">
+                <h3 class="section-title display-4">Contact Us</h3>
+                <p class="lead">LaptopSupport.in is one of the leading companies in Laptop Services & Sales. </p>
+                <a href="tel:911234567890" class="section-title">Call now</a>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <img src="../images/contact_us.svg" style="width: 100%;">
+        </div>
+    </div>
+
+    <div class="row mt-4" id="addressDiv">
+
+        <iframe id="desktopMap" width="100%" height="450" frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/place?q=place_id:EkNCZWphbmppIEtvdHdhbCBTdCwgS2hhcndhd2FkLCBOYW5wdXJhLCBTdXJhdCwgR3VqYXJhdCAzOTUwMDEsIEluZGlhIi4qLAoUChIJgfENVHpO4DsRgdnBFOv3LC8SFAoSCWvQelB6TuA7EfRGIS2uCx3j&key=AIzaSyAzLhLETDH0Ig_IQXEngajmu4fV8k88cKo"
+            allowfullscreen></iframe>
+        <div class="col-md-4 ml-auto d-flex flex-column detailDiv">
+            <div class="p-1">
+                <a class="navbar-brand" href="/">LaptopSupport.in</a>
+                <h4>Multibrand Laptop Sales & Service</h4>
+                <p>Laptop Repairing, Apple Macbook, iMac Repairing, Projector Service, Data Recovery</p>
+                <hr>
+            </div>
+            <div class="p-1">
+                <div class="d-flex">
+                    <div class="p-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52"
+                            class="contact-geo-icon bi bi-geo-alt" viewBox="0 0 16 16">
+                            <path
+                                d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                            <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                        </svg>
+                    </div>
+                    <div class="p-1">
+                        <p class="lead">
+                            202, Kamleshwar Appt,<br>
+                            Bejanji Kotwai Street,<br>
+                            Opp Lalbhai Contactor complex,<br>
+                            Nanpura, SURAT,<br>
+                            Gujarat-395001
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-1">
+                <div class="d-flex">
+                    <div class="p-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52"
+                            class="contact-geo-icon bi bi-people" viewBox="0 0 16 16">
+                            <path
+                                d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
+                        </svg>
+                    </div>
+                    <div class="p-1">
+                        <h5>Keyur Shroff</h5>
+                        <a href="#">+91 XXXXX-XXXXX</a><br>
+                        <a href="#">keyur@LaptopSupport.com</a>
+
+                        <br><br>
+                        <h5>Keyur Shroff</h5>
+                        <a href="#">+91 XXXXX-XXXXX</a><br>
+                        <a href="#">keyur@LaptopSupport.com</a>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container" id="mobileMap">
+    <h3 class="section-title text-center">Find Us On Map</h3>
+    <div class="row">
+        <div class="col-md-12">
+            <iframe width="100%" height="450" frameborder="0" style="border:0"
+                src="https://www.google.com/maps/embed/v1/place?q=place_id:EkNCZWphbmppIEtvdHdhbCBTdCwgS2hhcndhd2FkLCBOYW5wdXJhLCBTdXJhdCwgR3VqYXJhdCAzOTUwMDEsIEluZGlhIi4qLAoUChIJgfENVHpO4DsRgdnBFOv3LC8SFAoSCWvQelB6TuA7EfRGIS2uCx3j&key=AIzaSyAzLhLETDH0Ig_IQXEngajmu4fV8k88cKo"
+                allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
