--- a/services/index.liquid
+++ b/services/index.liquid
@@ -1,5 +1,120 @@
 ---
-title: Laptop Support | Services
+title: Laptop Support | services
 layout: client-layout.liquid
 ---
-<h1>Services</h1>
+<div class="container pt-4 pb-4" id="aboutBanner">
+    <div class="row bg-light br-10">
+        <div class="col-md-7 d-flex flex-column justify-content-center content-col">
+            <div class="content">
+                <h3 class="section-title display-4">Our Services</h3>
+                <p class="lead">LaptopSupport.in provides total laptop/ macbook/ iMac solution under one roof. </p>
+                <a href="tel:911234567890" class="section-title">Call now</a>
+            </div>
+        </div>
+        <div class="col-md-4 image-col">
+            <img src="../images/services.svg" style="width: 100%;">
+        </div>
+    </div>
+</div>
+<div class="container pt-4 pb-4">
+    <div class="d-flex flex-column flex-wrap justify-content-center">
+        <a href="/services/laptop/" class="p-1 my-card row">
+            <div class="col-md-4">
+                <img src="../images/laptop.png" alt="" style="max-width: 100%;">
+            </div>
+            <div class="col-md-8">
+                <div class="p-1 ">
+                    <h2 class="section-title ">Laptop
+                        Solution</h2>
+                    <p>Logic Board Repair/ Replacement <br>
+                        OS / Software installation <br>
+                        Laptop Body Fabication & New Replacement <br>
+                        Hinges fixing / Replacement <br>
+                        Keyboard Repalcement <br>
+                        Screen / Display Issues solution <br>
+                        Bios / Firmware password receovery <br>
+                        Bios / Firmware ReWriting <br>
+                        Battery Chnarging Solution</p>
+                </div>
+            </div>
+        </a>
+        <a href="/services/apple/" class="p-1 my-card row ">
+            <div class="col-md-4">
+                <img src="../images/apple_family.png" alt="" style="max-width: 100%;">
+            </div>
+            <div class="col-md-8">
+                <div class="p-1 ">
+                    <h2 class="section-title ">Apple
+                        Solution</h2>
+                    <p>macOS installation <br>
+                        Logic board Reparing/ Replacement <br>
+                        Power issues/ Battery Charging solution <br>
+                        Display Repair / Replacement <br>
+                        Firmware Update / Recovery (T2) <br>
+                        Data Recovery</p>
+                </div>
+            </div>
+        </a>
+        <a href="/services/hddrecovery/" class="p-1 my-card row ">
+            <div class="col-md-4">
+                <img src="../images/hddrecovery.png" alt="" style="max-width: 100%;">
+            </div>
+            <div class="col-md-8">
+                <div class="p-1 ">
+                    <h2 class="section-title ">Hdd
+                        Recovery</h2>
+                    <p>Firmware Issue Resolution <br>
+                        Head Replacement <br>
+                        Detection Issue Solution <br>
+                        Logic Board Repair/ Replacement <br>
+                        Partition Recovery <br>
+                        Lost File Recovery</p>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+
+<section id="contactSection" class="mt-5 text-light pb-5 pt-5">
+    <h1 class="text-center section-title-light">Know more</h1>
+    <p class="text-center">Feel free to contact us</p>
+    <div class="container ">
+        <div class="col-md-7 mx-auto fadeInRight">
+            <div class="form-group">
+                <label>Name</label>
+                <input class="form-control" placeholder="Name">
+            </div>
+
+            <div class="form-row fadeInRight">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Phone</label>
+                        <input class="form-control" type="tel" placeholder="XXXX-XXXX-XX">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input class="form-control" type="email" placeholder="abc@example.com">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Services</label>
+                <select class="form-control">
+                    <option>Laptop Services</option>
+                    <option>Apple Services</option>
+                    <option>Projector Services</option>
+                </select>
+            </div>
+
+            <div class="form-group fadeInRight">
+                <label>Message</label>
+                <textarea class="form-control" placeholder="Type Message here."></textarea>
+            </div>
+
+            <button class="btn mt-5 btn-warning btn-block ml-auto fadeInRight">Submit</button>
+        </div>
+    </div>
+</section>
