--- a/_includes/client-layout.liquid
+++ b/_includes/client-layout.liquid
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laptop Support | Home</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -115,7 +115,9 @@
             </div>
         </div>
     </nav>
-    {{content}}
+    <main id="mainContent">
+        {{content}}
+    </main>
 
     <footer class="footer">
         <div class="container">
@@ -140,8 +142,8 @@
                         <div class="col-md-2 footer-menu">
                             <h3>Company</h3>
                             <ul>
-                                <li> <a href="#">Home</a> </li>
-                                <li> <a href="#">About</a> </li>
+                                <li> <a href="/">Home</a> </li>
+                                <li> <a href="/about">About</a> </li>
                                 <li> <a href="#">Blog</a> </li>
                                 <li> <a href="#">Career</a> </li>
 
@@ -179,6 +181,17 @@
 
 
     </footer>
+
+    <div id="moveToTop">
+        <button id="BtnMoveToTop" onclick="window.scrollTo(0,0)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" class="bi bi-arrow-up-square-fill"
+                viewBox="0 0 16 16">
+                <path
+                    d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2zm6.5-4.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 1 0z" />
+            </svg>
+        </button>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
