--- a/index.liquid
+++ b/index.liquid
@@ -134,7 +134,10 @@ layout: client-layout.liquid
             <h2 class="section-title">Why choose us?</h2>
         </div>
         <div class="col-md-8 ">
-            <p class="lead">We are providing support in laptop & computer from over a decade.. lorem ippsum</p>
+            <p class="lead"> In this Laptop Service industry from the year 2000 has made us capable of providing and
+                creating the best solutions for our customer. Laptopsupport.in is one of the leading companies in Laptop
+                Repair and Services domain, and is gaining momentum day by day. We have a strong team of individuals who
+                have supported and contributed to our success. </p>
         </div>
     </div>
 </section>
@@ -158,7 +161,7 @@ layout: client-layout.liquid
                 <div class="card-body text-center">
                     <h5>☝ Inward Your Laptop</h5>
                     <p>We are also providing free Pickup & Drop Facility.</p>
-                    <a href="#">Read more.</a>
+
                 </div>
             </div>
 
@@ -176,7 +179,7 @@ layout: client-layout.liquid
                     <h5>✌Estimate</h5>
                     <p>Our Well Experienced Technicians will diagnose the issue & provides estimate. We don't charge for
                         cancellation of estiamte <strong>No Fix, No Fees!</strong> </p>
-                    <a href="#">Read more.</a>
+
                 </div>
             </div>
 
@@ -192,7 +195,7 @@ layout: client-layout.liquid
                 <div class="card-body text-center">
                     <h5>🤘Deliver</h5>
                     <p>After confirmation of estimate, we fixes the issue and delivers to you.</p>
-                    <a href="#">Read more.</a>
+
                 </div>
             </div>
 
@@ -357,7 +360,7 @@ layout: client-layout.liquid
                         <div class="my-card-detail">
                             <h5>No Fix No Fees</h5>
                             <p>We provides Free Diagnosing <strong>No Cancellation Changes</strong> </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -371,7 +374,7 @@ layout: client-layout.liquid
                         <div class="my-card-detail">
                             <h5>Get Any Part</h5>
                             <p>Get Any laptop/ Apple/ projector parts @ dealer price </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -388,7 +391,7 @@ layout: client-layout.liquid
                         <div class="my-card-detail">
                             <h5>Next Day Estimate</h5>
                             <p>Get Fastest Estimation for majority of the issues.</p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -404,7 +407,7 @@ layout: client-layout.liquid
                         <div class="my-card-detail">
                             <h5>100% Satisfaction</h5>
                             <p>We Provide service with asurity at first.<strong></strong> pay only if satisfied</p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -422,7 +425,7 @@ layout: client-layout.liquid
                         <div class="my-card-detail">
                             <h5>Free Pickup and Drop</h5>
                             <p>We also provide facility to Pickup & Drop your Apple Product @ your Door Step. </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -437,7 +440,7 @@ layout: client-layout.liquid
                         <div class="my-card-detail">
                             <h5>30 Days Warranty & Support</h5>
                             <p>We provie Money Back Gaurantee So you only gonna Pay if your problem is resolved. </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
@@ -453,7 +456,7 @@ layout: client-layout.liquid
                         <div class="my-card-detail">
                             <h5>Affordable Price</h5>
                             <p>Fix issue with your Product at Much Much Affordable Price Gauranteed </p>
-                            <a href="#">Read more.</a>
+
                         </div>
                     </div>
                 </div>
