--- a/styles/main.scss
+++ b/styles/main.scss
@@ -34,6 +34,10 @@ div#spinner-wrapper{
     }
 }
 
+main#mainContent{
+    min-height: 80vh;
+}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
@@ -50,6 +54,11 @@ div.topbar{
     .header-icon path{
         fill: $color-accent;
     }
+}
+
+div.navbar{
+    position: sticky;
+    top: 0;
 }
 
 a{
@@ -280,6 +289,34 @@ div#mobileMap{
     }
 }
 
+.my-card{
+    width: 100%;
+    margin-bottom: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 5px #eee;
+    transition: .2s;
+    &:hover{
+        transform: scale(1.1);
+    }
+}
+
+div#moveToTop{
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 0;
+    margin: 0;
+    background: none;
+    button{
+        padding: 0;
+        margin: 0;
+        border: none;
+        background: none;
+        svg{
+            fill: $color-accent;
+        }
+    }
+}
 @media screen and (max-width: $breakpoint-sm){
     :root{
         font-size: 14px;
