temprary service detail page disable

--- a/services/index.liquid
+++ b/services/index.liquid
@@ -18,7 +18,7 @@ layout: client-layout.liquid
 </div>
 <div class="container pt-4 pb-4">
     <div class="d-flex flex-column flex-wrap justify-content-center">
-        <a href="/services/laptop/" class="p-1 my-card row">
+        <a href="/services/" class="p-1 my-card row">
             <div class="col-md-4">
                 <img src="../images/laptop.png" alt="" style="max-width: 100%;">
             </div>
@@ -38,7 +38,7 @@ layout: client-layout.liquid
                 </div>
             </div>
         </a>
-        <a href="/services/apple/" class="p-1 my-card row ">
+        <a href="/services/" class="p-1 my-card row ">
             <div class="col-md-4">
                 <img src="../images/apple_family.png" alt="" style="max-width: 100%;">
             </div>
@@ -55,7 +55,7 @@ layout: client-layout.liquid
                 </div>
             </div>
         </a>
-        <a href="/services/hddrecovery/" class="p-1 my-card row ">
+        <a href="/services/" class="p-1 my-card row ">
             <div class="col-md-4">
                 <img src="../images/hddrecovery.png" alt="" style="max-width: 100%;">
             </div>
